small mods, added image in about sec

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,7 @@ layout: default
 <div class="post">
 
   <header class="post-header">
+   <img src="/images/deep_garbage_small.png"></img>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
